# nonebot-plugin-xiuxian-signin

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  __init__.py  admin.py  admin_dashboard.py  beast_realm.py  beast_realm_cards.py  cards.py  character_assets.py  config.py  domain.py  mystic_battle.py  mystic_cards.py  mystic_dungeon.py  mystic_runtime.py  pyproject.toml  storage.py
assets/admin_web/: index.html
assets/admin_web/assets/: antd-vendor-47HpryX8.js  antd-vendor-CGkHA_tT.js  charts-DGOMiOPO.js  charts-vendor-4RyqNat3.js  charts-vendor-CKalhBfZ.js  charts-vendor-C_-J7Xdl.js  data-vendor-CcHCHMAR.js  data-vendor-DCRQ_lws.js  icons-BTw4K5kQ.js  icons-BXNOGrLa.js  icons-BhuKRH-1.js  icons-C5uiNfnH.js  icons-CS1elsky.js  index-6MPalME6.js  index-6QdIFceD.js  index-B47_lAc0.css  index-B84v045m.css  index-BIOsgV5x.js  index-BLAHNcb5.js  index-BT9qoIZN.css  index-BWkRS-VR.js  index-BdK0LdSa.js  index-BdLNZhYP.js  index-Bi1XU77E.css  index-ByL-5XnO.css  index-C8nJ6Til.css  index-CBBQDd5d.css  index-CDWexRZ3.js  index-CGCmhiOR.js  index-CMCK34Ro.css  index-COv2mMqS.css  index-CiMCtuXl.js  index-CjDLDGyD.js  index-Cwa5cp2N.css  index-CyVAugmr.js  index-DbqzDk8Q.css  index-DkkTmwvl.js  index-DlKEj80t.js  index-Dm3TOTD9.js  index-DqdKZigB.css  (+8 more)
assets/character_portraits/: manifest.json
assets/item_icons/: item_icon_records.json
assets/mystic_maps/: manifest.json  templates.json
assets/realm_quality_icons/: realm_quality_icon_manifest.json
assets/spirit_root_icons/: spirit_root_icon_manifest.json
docs/superpowers/plans/: 2026-07-08-webui-redesign-implementation.md
docs/superpowers/specs/: 2026-07-08-webui-redesign-design.md  2026-07-10-ant-design-webui-redesign-design.md
nonebot_plugin_xiuxian_signin/: README.md  __init__.py  cards.py  config.py  domain.py  storage.py
nonebot_plugin_xiuxian_signin/assets/admin_web/: index.html
nonebot_plugin_xiuxian_signin/assets/admin_web/assets/: antd-vendor-CBIcTNX5.js  charts-DGH2MO5Q.js  charts-vendor-cP4uso0u.js  index-CXbB8t7f.css  index-D8PHLQ3M.js  react-vendor-Cqqu3KgM.js
tests/: test_admin_dashboard.py  test_admin_routes.py  test_combat_turns.py  test_domain_features.py  test_mystic_battle.py  test_mystic_cards.py  test_mystic_dungeon.py  test_mystic_integration.py  test_mystic_storage.py  test_xiuxian_admin_rewrite.py
tools/: build_character_portraits.py  build_signin_ui_sprite.py  build_variable_panel_slices.py  generate_character_portrait_atlases_gpt.py  generate_character_portraits_gpt.py  generate_mystic_map_backgrounds_gpt.py  recut_item_icons.py  recut_realm_quality_icons.py  render_adventure_preview.py  render_battle_preview.py  render_beast_realm_preview.py  render_mystic_map_preview.py  render_signin_preview_native.py  render_signin_preview_native_v3.py
webui/: biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
webui/src/: App.tsx  index.css  main.tsx  styles.css
webui/src/components/layout/: AppShell.tsx
webui/src/components/state/: LoadState.tsx
webui/src/components/ui/: badge.tsx  button.tsx  card.tsx  combobox.tsx  command.tsx  input.tsx  select.tsx  sonner.tsx  spinner.tsx  table.tsx
webui/src/features/beast/: beast-workspace.tsx
webui/src/features/catalog/: catalog-workspaces.test.tsx
webui/src/features/config/: config-workspace.test.tsx  config-workspace.tsx
webui/src/features/dashboard/: dashboard-workspace.test.tsx  dashboard-workspace.tsx
webui/src/features/equipment/: equipment-workspace.tsx
webui/src/features/items/: items-workspace.tsx
webui/src/features/mystic/: mystic-workspace.test.tsx  mystic-workspace.tsx
webui/src/lib/: api.test.ts  api.ts  format.ts  presentation.test.ts  presentation.ts  types.ts
webui/src/pages/: BeastCardsPage.tsx  ConfigPage.tsx  DashboardPage.tsx  EquipmentPage.tsx  ItemsPage.tsx  MysticPage.tsx  PlayersPage.tsx  RulesPage.tsx  pageShared.ts  playerEditor.tsx  playerMeta.ts
webui/src/test/: setup.ts
(+6 files in other folders)
