[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-xiuxian-signin"
version = "0.5.1"
description = "A NoneBot2 cultivation signin plugin with image panels, fishing, realms, mystic realms, items, duels and PicMenu Next support."
readme = "README.md"
requires-python = ">=3.10, <4.0"
license = { text = "MIT" }
authors = [
    { name = "fallen_rainy" },
]
keywords = ["nonebot", "nonebot2", "plugin", "onebot", "xiuxian", "signin", "picmenu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-localstore>=0.7.0",
    "Pillow>=10.0.0",
    "httpx>=0.24.0",
    "pydantic>=1.10",
]

[project.urls]
Homepage = "https://github.com/hszxjs/nonebot-plugin-xiuxian-signin"
Repository = "https://github.com/hszxjs/nonebot-plugin-xiuxian-signin"
Issues = "https://github.com/hszxjs/nonebot-plugin-xiuxian-signin/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.nonebot]
plugins = ["nonebot_plugin_xiuxian_signin"]

[tool.setuptools]
packages = ["nonebot_plugin_xiuxian_signin"]
include-package-data = true

[tool.setuptools.package-dir]
nonebot_plugin_xiuxian_signin = "."

[tool.setuptools.package-data]
nonebot_plugin_xiuxian_signin = [
    "py.typed",
    "assets/fonts/*.ttf",
    "assets/item_icons/item_icon_records.json",
    "assets/item_icons/items/*.png",
    "assets/panel_backgrounds/*.png",
    "assets/realm_quality_icons/realm_quality_icon_manifest.json",
    "assets/realm_quality_icons/*.png",
    "assets/spirit_root_icons/spirit_root_icon_manifest.json",
    "assets/spirit_root_icons/*.png",
    "assets/ui_sprite/signin/output/spec/*.json",
    "assets/ui_sprite/signin/output/sprites/*.png",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"
